# HarmonizePy

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: FEATURE_PARITY.md
benchmarks/: RESULTS.md  __init__.py  bench.py  config.yaml  datasets.py  generate_data.py  harness.py  metrics.py  report.py  run_benchmarks.py  scenarios.py  template_run.R  validity.py
benchmarks/r/: benchmark_r.R
benchmarks/runners/: __init__.py  python_runner.py  r_runner.py
docs/: API-Reference.md  Algorithms.md  Benchmarks.md  CLI-Reference.md  Home.md  Input-Format.md  Installation.md  Pipeline.md  Quick-Start.md  R-Compatibility.md  _Footer.md  _Sidebar.md
renv/: activate.R
src/harmonizepy/: __init__.py  __main__.py  affiliation.py  blocking.py  combat.py  combat_wrapper.py  core.py  io.py  limma_wrapper.py  rebuild.py  sorting.py  splitting.py  spotting.py  types.py  validation.py
tests/: __init__.py  test_api.py  test_benchmarks.py  test_blocking.py  test_cli.py  test_combat.py  test_comprehensive.py  test_io.py  test_limma.py  test_pipeline.py  test_smoke.py  test_sorting.py  test_splitting.py  test_unique_removal.py  test_validation.py
tests/fixtures/: chain_rescue_batch.csv  chain_rescue_input.tsv  chain_rescue_ur_true.tsv  combined_stress_batch.csv  combined_stress_input.tsv  combined_stress_output.tsv  generate_blocking_fixtures.R  generate_edgecase_fixtures.R  generate_r_fixtures.R  highmiss_block2_combat_mode1.tsv  highmiss_block2_combat_mode2.tsv  highmiss_block2_combat_mode3.tsv  highmiss_block2_combat_mode4.tsv  highmiss_block2_limma.tsv  highmiss_harmonizr_combat_mode1.tsv  highmiss_harmonizr_combat_mode2.tsv  highmiss_harmonizr_combat_mode3.tsv  highmiss_harmonizr_combat_mode4.tsv  highmiss_harmonizr_limma.tsv  highmiss_input.tsv  highmiss_nour_combat_mode1.tsv  highmiss_sparsity_block2_combat_mode1.tsv  highvar_combat_mode1.tsv  highvar_combat_mode2.tsv  highvar_combat_mode3.tsv  highvar_combat_mode4.tsv  highvar_input.tsv  highvar_limma.tsv  large_batch.csv  large_combat_mode1.tsv  large_combat_mode2.tsv  large_combat_mode3.tsv  large_combat_mode4.tsv  large_input.tsv  large_limma.tsv  large_sparsity_block4_combat_mode1.tsv  medium_batch.csv  medium_block2_combat_mode1.tsv  medium_block2_combat_mode2.tsv  medium_block2_combat_mode3.tsv  (+64 more)
