[project]
name = "harmonizepy"
version = "0.2.0"
description = "Pure-Python batch-effect harmonization (ComBat + limma), validated against R sva/HarmonizR."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Lange Lab" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
# pip install harmonizepy[config]   → enables YAML and TOML (Python < 3.11) config files
config = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]
# pip install harmonizepy[completion] → enables shell tab-completion via argcomplete
completion = ["argcomplete>=3.0"]

[project.scripts]
harmonizepy = "harmonizepy.__main__:main"

[project.urls]
Repository = "https://github.com/LangeLab/HarmonizePy"
Issues = "https://github.com/LangeLab/HarmonizePy/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.uv]
package = true
