[project]
name = "harmonizepy"
version = "0.2.0"
description = "Pure-Python batch-effect harmonization (ComBat + limma), validated against R sva/HarmonizR."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "Lange Lab" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
# pip install harmonizepy[config]   → enables YAML and TOML config files
config = [
    "pyyaml>=6.0",
]
# pip install harmonizepy[completion] → enables shell tab-completion via argcomplete
completion = ["argcomplete>=3.0"]
# pip install harmonizepy[io] → pyarrow for faster IO and parquet output
io = [
    "pyarrow>=14.0",
]
# pip install harmonizepy[all] → everything
all = [
    "harmonizepy[config,completion,io]",
]

[project.scripts]
harmonizepy = "harmonizepy.__main__:main"

[project.urls]
Repository = "https://github.com/LangeLab/HarmonizePy"
Issues = "https://github.com/LangeLab/HarmonizePy/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pandas-stubs>=2.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PTH", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.uv]
package = true
